--- a/style.css
+++ b/style.css
@@ -20,8 +20,19 @@ body {
 /* Typography */
 /* TODO */
 
+.home-text {
+  display: flex;
+  justify-self: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 /* Navigation bar */
 header {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+
   background-color: #333;
   padding: 10px;
 }
@@ -52,16 +63,24 @@ header {
   font-size: 2rem;
   cursor: pointer;
 
+  position: relative;
+  top: -2px;
+
   /* Display on mobile */
   display: block;
 }
 
 .mobile-menu {
+  position: absolute;
+  transform: translateY(22px);
+  right: 0;
+  text-align: center;
+
   background-color: #333;
   padding: 10px;
   position: absolute;
   top: 50px;
-  width: 100%;
+  width: 50%;
   z-index: 1;
   display: none;
 }
@@ -104,6 +123,68 @@ header {
 section {
   padding: 40px 20px;
   text-align: center;
+}
+
+/* Carousel */
+.carousel-container {
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  margin: auto;
+}
+
+.carousel-slide {
+  display: flex;
+}
+
+.carousel-slide img {
+  width: 100%;
+  display: none;
+}
+
+.carousel-slide img.active {
+  display: block;
+}
+
+.carousel-navigation .prev,
+.next {
+  color: #ff6600;
+}
+
+.carousel-navigation {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.carousel-navigation button {
+  background-color: transparent;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  outline: none;
+}
+
+.carousel-bullets {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.carousel-bullets .bullet {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-color: #333;
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.carousel-bullets .bullet.active {
+  background-color: #ff6600;
 }
 
 .web-cards {
