--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header {
 }
 
 .logo {
-  font-size: 1.5rem;
+  width: 32px;
 }
 
 .menu {
@@ -187,17 +187,49 @@ section {
   background-color: #ff6600;
 }
 
+/* Web cards */
 .web-cards {
   display: flex;
   /* Stacks cards vertically on mobile */
   flex-direction: column;
   gap: 20px;
+  align-items: center;
 }
 
+/* Web card */
 .card {
-  background-color: #c5c5c5;
-  padding: 20px;
+  background-color: #fff;
   flex-basis: 100%;
+
+  display: flex;
+  flex-direction: column;
+
+  max-width: 300px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card-image {
+  height: 200px;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 16px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.card-title {
+  font-size: 24px;
+}
+
+.card-description {
+  color: #555;
 }
 
 .small-card {
